QuizTest and Added tabIcon along with Codecleanup

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="icon" href="static/images/logo.png" />
 
     <title>Quizeal | Home</title>
   </head>
